<resources>
    <string name="app_name">Dater</string>
    <string name="Username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_form">Register Form</string>
    <string name="login_form">Login Form</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="dummy1">Dummy 1</string>
    <string name="dummy2">Dummy 2</string>
    <string name="dummy3">Dummy 3</string>
    <string name="bookmark">Bookmark</string>
    <string name="explore">Explore</string>
    <string name="user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- from project spotr -->
    <string name="addSpot_locationCoordinates">Location: %s, %s</string>
    <string name="addSpot_nameHint">Enter name of Spot</string>
    <string name="addSpot_add">Add Spot</string>
    <string name="addSpot_snippet">Add a Short Description…</string>
    <string name="addSpot_description">Add Description…</string>

</resources>