<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_form"
        android:textSize="34sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="97dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:text="Email" />

    <EditText
        android:id="@+id/editText_login_emailAddressInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:text="Password" />

    <EditText
        android:id="@+id/editText_login_passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="101dp" />

    <Button
        android:id="@+id/button_login_loginButton"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:text="@string/login"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_login_switchToRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/register"
        android:textColor="@color/purple_700"
        android:textSize="20sp" />
</LinearLayout>