<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".AddSpotActivity">

    <EditText
        android:id="@+id/editText_addSpot_name"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/addSpot_nameHint"
        android:inputType="textPersonName"
        android:textColorHint="#616161" />

    <TextView
        android:id="@+id/textView_addSpot_location"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:text="@string/addSpot_add"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editText_addSpot_snippet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addSpot_snippet"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText_addSpot_description"
        android:layout_width="match_parent"
        android:layout_height="254dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/addSpot_description"
        android:inputType="textMultiLine"
        android:textColorHint="#546E7A" />

    <Button
        android:id="@+id/button_addSpot_add"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onAddSpotButtonClicked"
        android:text="@string/addSpot_add" />

</LinearLayout>